updates on dammy shizy

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -121,7 +121,7 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/aadesina/" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
@@ -137,7 +137,7 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/jussilaurimaa/" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
@@ -169,7 +169,7 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/anu-adasolum-46754a19/" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
@@ -185,48 +185,12 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/kolawoleakinboye/" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
                 </div>
-                <!-- <div class="col-xs-24 col-md-8">
-        <div class="p-6">
-            <div class="portrait mb-2">
-            <img src="/images/senior_management/CTO.jpg" class="portrait-img"/>
-            </div>
-            <h1 class="t-24 mb-2">Ikem Emellieze</h1>
-            <p>Chief Techonology Officer</p>
-            <p style="display: inline-block;">
-                <span class="d-none">Social Media Handles</span>
-                <a href="#" target="_blank" class="p-1">
-                    <span class="social twitter circle">Twitter</span>
-                </a>
-                <a href="https://www.linkedin.com/in/emelieze/" target="_blank" class="p-1">
-                    <span class="social linkedin circle">LinkedIn</span>
-                </a>
-            </p>
-        </div>
-    </div> -->
                 <div class="col-xs-24 col-md-6">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
-                            <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
-                                class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2 yellow-text">Szabi Baranyi</h1>
-                        <p class="white-text">VP, Corporate Finance</p>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://uk.linkedin.com/in/szabibaranyi" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
-                            </a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Adesola-Alli.jpg"
@@ -239,10 +203,47 @@
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://ng.linkedin.com/in/adesola-alli-ab3271b" target="_blank"
                                class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
+
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-24 col-md-6 offset-md-3">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
+                                 class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2 yellow-text">Szabi Baranyi</h1>
+                        <p class="white-text">VP, Corporate Finance</p>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://uk.linkedin.com/in/szabibaranyi" target="_blank" class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-24 col-md-6">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/senior_management/Sade-Fagbola.jpg"
+                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2 yellow-text">Sade Fagbola</h1>
+                        <p class="white-text">Head of Commercial Operations and Supply Chain</p>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/sade-fagbola-mba-05699413/" target="_blank"
+                               class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+
                 </div>
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
@@ -256,7 +257,7 @@
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/hendrik-l%C3%BChl-956503158/" target="_blank"
                                class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
@@ -283,7 +284,7 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/chris-foy-8a668a2b/?originalSubdomain=uk" target="_blank" class="p-1">
-                                <span class="social linkedin circle text-white">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
@@ -291,36 +292,36 @@
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
-                            <img src="/images/board/david-ladipo.jpg" alt="rensource energy - Board Member"
-                                class="portrait-img" />
+                            <img src="/images/board/Baafour-Boateng.jpg" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
                         </div>
-                        <h1 class="t-24 mb-2">David Ladipo</h1>
+                        <h1 class="t-24 mb-2">Baafuor Otu-Boateng</h1>
                         <p style="display: inline-block;">
-<!--                            <span class="d-none">Social Media Handles</span>-->
-<!--                            <a href="#" target="_blank" class="p-1">-->
-<!--                                <span class="social linkedin circle">LinkedIn</span>-->
-<!--                            </a>-->
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="http://www.afox.ox.ac.uk/news/baafour-otu-boateng/" target="_blank" class="p-1">
+                                <img src="/images/plus.svg" class="social-img">
+                            </a>
                         </p>
                     </div>
                 </div>
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
-                            <img src="/images/board/Baafour-Boateng.jpg" alt="rensource energy - Board Member"
-                                class="portrait-img" />
+                            <img src="/images/board/James-Eedes.jpg" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
                         </div>
-                        <h1 class="t-24 mb-2">Baafour Boateng</h1>
+                        <h1 class="t-24 mb-2">James Eedes</h1>
                         <p style="display: inline-block;">
-<!--                            <span class="d-none">Social Media Handles</span>-->
-<!--                            <a href="https://ng.linkedin.com/in/sasha-israni-68937578" target="_blank" class="p-1">-->
-<!--                                <span class="social linkedin circle">LinkedIn</span>-->
-<!--                            </a>-->
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://za.linkedin.com/in/jameseedes" target="_blank" class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
@@ -330,11 +331,27 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/jwkirschner/" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
                 </div>
+                <div class="col-xs-24 col-md-6">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/board/david-ladipo.jpg" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2">David Ladipo</h1>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.amayacap.com/people" target="_blank" class="p-1">
+                                <img src="/images/plus.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
@@ -345,7 +362,7 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/pardon-makumbe-71b7205/" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
                     </div>
@@ -390,10 +407,6 @@
                     <h3 class="footer-h">Company</h3>
                     <nav class="">
                         <ul id="menu-footer" class="nav nav-footer flex-column">
-                            <li class="">
-                                <a href="/history/index.html" class="">Overview</a></li>
-                            <li class="">
-                                <a href="/history/index.html" class="">About Us</a></li>
                             <li class="">
                                 <a href="/leadership/index.html" class="">
                                     Our Team
