--- a/leadership/index.html
+++ b/leadership/index.html
@@ -19,6 +19,10 @@
             height: 250px;
             width: 250px;
         }
+
+        .social-img {
+            width: 30px !important;
+        }
     </style>
     <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
 
