--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
                     column;justify-content: center;position: absolute;*/ /*background: url('images/Rectangle.svg');*/
                     mix-blend-mode: normal; background-size: cover; background-position: bottom;padding-top: 8.5rem !important;">
                     <div class=" special-container pb-3">
-                    <h2 class="text-color-gray-dark" style="font-weight: 700">Rensource develops and manages critical infrastructure that powers the productivity of
+                    <h2 class="text-color-gray-dark" style="font-weight: 700; font-size: 28px !important;">Rensource develops and manages critical infrastructure that powers the productivity of
                         small and medium sized enterprises.</h2>
                     <h6 class="carou-p" style="font-weight: 500;">
                         Using the provision of solar-based microutilities an entry point, Rensource provides tools
-                        and services to support the digitalization and productivity growth of SMEs in West Africa                    </h6>
+                        and services to support the digitalization and productivity growth of SMEs in West Africa.                    </h6>
 
                     <div class="d-flex" style="flex-wrap: wrap; margin-top: 4rem; align-items: center;
   justify-content: center;">
@@ -231,7 +231,7 @@
                     <h1 class="text-white">Powering the productivity of small and medium sized enterprises</h1>
                 </div>
                 <div class="tag-title" style="font-size: 1.3rem">
-                    <p>Working with a diverse mix of stakeholders, an ecosystem that includes government, merchants, manufacturers, distributors, and the value chain linking them, Rensource is accelerating the transition from offline to online in the largest market in Africa.</p>
+                    <p>Working with a diverse mix of stakeholders, an ecosystem that includes government, merchants, manufacturers, and distributors, Rensource is accelerating the transition from offline to online in the largest market in Africa.</p>
                 </div>
             </div></div>
     </section>
@@ -530,7 +530,7 @@
                             </li> -->
                         </ul>
                     </nav>
-                    <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
+                    <p class="show-xs mt-2">©2019 Rensource Inc. All Rights Reserved.</p>
                 </div>
                 <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                     <img src="/images/toTop.svg" class="img-fluid">
@@ -561,7 +561,7 @@
         </div>
         <div class="copyright hide-xs footer-bottom">
             <div class="container">
-                ©2019 Rensource Limited. All Rights Reserved.
+                ©2019 Rensource Inc. All Rights Reserved.
             </div>
         </div>
     </footer>
