--- a/faqs/index.html
+++ b/faqs/index.html
@@ -192,7 +192,7 @@
               </ul>
             </nav>
             <p class="show-xs mt-2">
-              ©2019 Rensource Limited. All Rights Reserved.
+              ©2019 Rensource Inc. All Rights Reserved.
             </p>
           </div>
           <span
@@ -250,7 +250,7 @@
       </div>
       <div class="copyright hide-xs footer-bottom">
         <div class="container">
-          ©2019 Rensource Limited. All Rights Reserved.
+          ©2019 Rensource Inc. All Rights Reserved.
         </div>
       </div>
     </footer>
