--- a/leadership/index.html
+++ b/leadership/index.html
@@ -238,7 +238,7 @@
                                  alt="rensource energy - Senior Technical Manager" class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Sade Fagbola</h1>
-                        <p class="white-text">Head of Commercial Operations and Supply Chain</p>
+                        <p class="white-text">Head, Commercial and Supply Chain</p>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/sade-fagbola-mba-05699413/" target="_blank"
@@ -296,21 +296,6 @@
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
-                            <img src="/images/board/Baafour-Boateng.jpg" alt="rensource energy - Board Member"
-                                 class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2">Baafuor Otu-Boateng</h1>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="http://www.afox.ox.ac.uk/news/baafour-otu-boateng/" target="_blank" class="p-1">
-                                <img src="/images/plus.svg" class="social-img">
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xs-24 col-md-6">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
                             <img src="/images/board/James-Eedes.jpg" alt="rensource energy - Board Member"
                                  class="portrait-img" />
                         </div>
@@ -323,9 +308,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-3">
+                <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
@@ -340,7 +323,9 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6">
+            </div>
+            <div class="row">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/david-ladipo.jpg" alt="rensource energy - Board Member"
@@ -371,6 +356,23 @@
                         </p>
                     </div>
                 </div>
+
+                <div class="col-xs-24 col-md-6">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/board/Baafour-Boateng.jpg" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2">Baafuor Otu-Boateng</h1>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="http://www.afox.ox.ac.uk/news/baafour-otu-boateng/" target="_blank" class="p-1">
+                                <img src="/images/plus.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
@@ -423,7 +425,7 @@
                     </li> -->
                         </ul>
                     </nav>
-                    <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
+                    <p class="show-xs mt-2">©2019 Rensource Inc. All Rights Reserved.</p>
                 </div>
                 <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                     <img src="/images/toTop.svg" class="img-fluid">
@@ -454,7 +456,7 @@
         </div>
         <div class="copyright hide-xs footer-bottom">
             <div class="container">
-                ©2019 Rensource Limited. All Rights Reserved.
+                ©2019 Rensource Inc. All Rights Reserved.
             </div>
         </div>
     </footer>
