--- a/media/index.html
+++ b/media/index.html
@@ -221,7 +221,7 @@
                                         </li> -->
                                     </ul>
                                 </nav>
-                                <p class="show-xs mt-2">©2019 Rensource Limited. All Rights Reserved.</p>
+                                <p class="show-xs mt-2">©2019 Rensource Inc. All Rights Reserved.</p>
                             </div>
                             <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                                 <img src="/images/toTop.svg" class="img-fluid">
@@ -251,7 +251,7 @@
                     </div>
                     <div class="copyright hide-xs footer-bottom">
                         <div class="container">
-                            ©2019 Rensource Limited. All Rights Reserved.
+                            ©2019 Rensource Inc. All Rights Reserved.
                         </div>
                     </div>
                 </footer>
