--- a/mission/index.html
+++ b/mission/index.html
@@ -304,7 +304,7 @@
               </ul>
             </nav>
             <p class="show-xs mt-2">
-              ©2019 Rensource Limited. All Rights Reserved.
+              ©2019 Rensource Inc. All Rights Reserved.
             </p>
           </div>
           <span
@@ -362,7 +362,7 @@
       </div>
       <div class="copyright hide-xs footer-bottom">
         <div class="container">
-          ©2019 Rensource Limited. All Rights Reserved.
+          ©2019 Rensource Inc. All Rights Reserved.
         </div>
       </div>
     </footer>
