--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     </section>
     <section class="products p-4 white-text tag-img" style="margin-bottom: -10px;">
         <div class="row text-center">
-            <div class="tag-box mt-9">
+            <div class="tag-box mt-2">
                 <div class="offset-md-6 col-md-12 text-center">
                     <h1 class="text-white">Powering the productivity of small and medium sized enterprises</h1>
                 </div>
@@ -455,7 +455,7 @@
             <div class="container">
                 <div class="row ">
                     <div class="col-xs-24  col-lg-8">
-                        <h5 class="mb-4 mt-6 text-center">Press Releases and News Articles</h5>
+                        <h5 class="mb-4 mt-6 text-center">Press Releases and Articles</h5>
                         <div id="news" class="threadContainer threadContainer-3">
                             <div id="rssfeeds"></div>
                         </div>
