--- a/leadership/index.html
+++ b/leadership/index.html
@@ -86,7 +86,6 @@
                     </ul>
                 </div>
             </div>
-
         </nav>
     </header>
     <section style="background:url(/images/bulb-bg.png) no-repeat, white; background-position: right center"
@@ -94,9 +93,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-24 col-md-12">
-                    <div class="p-6">
+                    <div class="p-4">
                         <h1 class="t-30 mb-4">
-                            The Rensource team is comprised of seasoned entrepreneurs, executives, and company builders passionate about transforming Africa.
+                            The Rensource team is comprised of seasoned entrepreneurs and executives passionate about transforming Africa.
                         </h1>
                     </div>
                 </div>
