update in leadership page

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -94,7 +94,7 @@
             <div class="row">
                 <div class="col-xs-24 col-md-12">
                     <div class="p-4">
-                        <h1 class="t-30 mb-4">
+                        <h1 class="t-30 mb-4 mt-6">
                             The Rensource team is comprised of seasoned entrepreneurs and executives passionate about transforming Africa.
                         </h1>
                     </div>
