--- a/leadership/index.html
+++ b/leadership/index.html
@@ -214,7 +214,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-3">
+                <div class="col-xs-24 col-md-6 offset-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
@@ -230,24 +230,24 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
-                            <img src="/images/senior_management/Sade-Fagbola.jpg"
-                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2 yellow-text">Sade Fagbola</h1>
-                        <p class="white-text">Head, Commercial and Supply Chain</p>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://www.linkedin.com/in/sade-fagbola-mba-05699413/" target="_blank"
-                               class="p-1">
-                                <img src="/images/linkedin.svg" class="social-img">
-                            </a>
-                        </p>
-                    </div>
+<!--                <div class="col-xs-24 col-md-6">-->
+<!--                    <div class="p-1">-->
+<!--                        <div class="portrait mb-2">-->
+<!--                            <img src="/images/senior_management/Sade-Fagbola.jpg"-->
+<!--                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />-->
+<!--                        </div>-->
+<!--                        <h1 class="t-24 mb-2 yellow-text">Sade Fagbola</h1>-->
+<!--                        <p class="white-text">Head, Commercial and Supply Chain</p>-->
+<!--                        <p style="display: inline-block;">-->
+<!--                            <span class="d-none">Social Media Handles</span>-->
+<!--                            <a href="https://www.linkedin.com/in/sade-fagbola-mba-05699413/" target="_blank"-->
+<!--                               class="p-1">-->
+<!--                                <img src="/images/linkedin.svg" class="social-img">-->
+<!--                            </a>-->
+<!--                        </p>-->
+<!--                    </div>-->
 
-                </div>
+<!--                </div>-->
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
