--- a/leadership/index.html
+++ b/leadership/index.html
@@ -193,28 +193,26 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
-                            <img src="/images/senior_management/Adesola-Alli.jpg"
-                                 alt="rensource energy - VP, Innovation"
-                                 class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2 yellow-text">Adesola Alli</h1>
-                        <p class="white-text">VP, Innovation</p>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://ng.linkedin.com/in/adesola-alli-ab3271b" target="_blank"
-                               class="p-1">
-                                <img src="/images/linkedin.svg" class="social-img">
-                            </a>
-                        </p>
-                    </div>
+<!--                <div class="col-xs-24 col-md-6">-->
+<!--                    <div class="p-1">-->
+<!--                        <div class="portrait mb-2">-->
+<!--                            <img src="/images/senior_management/Adesola-Alli.jpg"-->
+<!--                                 alt="rensource energy - VP, Innovation"-->
+<!--                                 class="portrait-img" />-->
+<!--                        </div>-->
+<!--                        <h1 class="t-24 mb-2 yellow-text">Adesola Alli</h1>-->
+<!--                        <p class="white-text">VP, Innovation</p>-->
+<!--                        <p style="display: inline-block;">-->
+<!--                            <span class="d-none">Social Media Handles</span>-->
+<!--                            <a href="https://ng.linkedin.com/in/adesola-alli-ab3271b" target="_blank"-->
+<!--                               class="p-1">-->
+<!--                                <img src="/images/linkedin.svg" class="social-img">-->
+<!--                            </a>-->
+<!--                        </p>-->
+<!--                    </div>-->
 
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-6">
+<!--                </div>-->
+                <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
@@ -230,6 +228,8 @@
                         </p>
                     </div>
                 </div>
+            </div>
+            <div class="row">
 <!--                <div class="col-xs-24 col-md-6">-->
 <!--                    <div class="p-1">-->
 <!--                        <div class="portrait mb-2">-->
@@ -248,7 +248,7 @@
 <!--                    </div>-->
 
 <!--                </div>-->
-                <div class="col-xs-24 col-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-8">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Hendrik-Luhl.jpg"
