--- a/contact/index.html
+++ b/contact/index.html
@@ -104,7 +104,7 @@
         </div>
       </nav>
     </header>
-    <div style="" class=" pt-4 pb-4">
+    <div style="" class="contact-info pt-4 pb-4">
       <div class="container mb-1">
         <div class="row">
           <div class="col">
@@ -112,7 +112,7 @@
           </div>
         </div>
       </div>
-      <section class="contact-info p-4">
+      <section class="p-4" style="background: #ffffff">
                 <div class="container">
         <div class="row">
           <div class="col">
@@ -139,12 +139,12 @@
       </section>
 
       <section class="clip-me-12 contact-form">
-        <div class=" row no-gutters pt-8">
+        <div class=" row no-gutters pt-2">
           <div class="col-xs-24 col-lg-12">
             <img src="/images/RENSOURCE-ENERGY3.jpg" class="img-fluid" />
           </div>
           <div class="col-xs-24 col-lg-12">
-            <form class="p-3 p-lg-8">
+            <form class="p-3 p-lg-6">
               <h3 class="text-white">Contact</h3>
               <div class="form-group">
                 <div class="label d-none">Name</div>
@@ -197,7 +197,7 @@
       
 
 
-      <section class="pt-8 pb-6 bg-white">
+      <section class="pt-4 pb-6 bg-white">
         <div class="row justify-content-center">
           <div class="col-xs-24 col-lg-10">
             <div
