update on contact from anu

--- a/contact/index.html
+++ b/contact/index.html
@@ -104,7 +104,7 @@
         </div>
       </nav>
     </header>
-    <div style="" class="contact-info pt-4 pb-4">
+    <div style="" class="contact-info pt-4">
       <div class="container mb-1">
         <div class="row">
           <div class="col">
@@ -197,12 +197,12 @@
       
 
 
-      <section class="pt-4 pb-6 bg-white">
+      <section class="pt-2 pb-2 bg-white">
         <div class="row justify-content-center">
           <div class="col-xs-24 col-lg-10">
             <div
-              class="bg-rensource-yellow br-4 m-3"
-              style="background: url(/images/idea.svg) no-repeat;background-position: right 120px"
+              class="br-4 m-3"
+              style="background: url(/images/idea.svg) no-repeat;background-position: right 120px; border: #F2C553 thin solid;"
             >
               <form class="p-lg-6 p-3 text-center sub">
                 <h4 class="mb-3 mt-3">
@@ -216,6 +216,7 @@
                     name="email"
                     id="emailSub"
                     placeholder="Email"
+                    style="border-bottom: 1px solid #f2c553;"
                   />
                 </div>
                 <button
