--- a/contact/index.html
+++ b/contact/index.html
@@ -104,11 +104,11 @@
         </div>
       </nav>
     </header>
-    <div style="" class="contact-info pt-4">
+    <div style="" class="contact-info">
       <div class="container mb-1">
         <div class="row">
-          <div class="col">
-            <h1>Contact Us</h1>
+          <div class="col pt-1">
+            <h3 style="margin: 0px; font-weight: 200;">Contact Us</h3>
           </div>
         </div>
       </div>
