--- a/contact/index.html
+++ b/contact/index.html
@@ -112,90 +112,31 @@
           </div>
         </div>
       </div>
-      <section class="p-4" style="background: #ffffff">
-                <div class="container">
-        <div class="row">
-          <div class="col">
-            <h1>
-            </h1>
-            <p>
-              Rensource Distributed Energy Limited<br />
-              3B, Tiamiyu Savage Street<br />
-              Victoria Island, Lagos<br />
-              Nigeria<br />
-              <span>+234 901 415 0103</span><br />
-              <span>info@rensource.energy</span><br />
-            </p>
-          </div>
-          <div class="col">
-            <div
-              id="map"
-              class="d-none d-md-block"
-              style="position: relative; overflow: hidden; height: 100%; width: 100%"
-            ></div>
-          </div>
-                      </div>
-        </div>
-      </section>
-
-      <section class="clip-me-12 contact-form">
+      <section class="clip-me-12">
         <div class=" row no-gutters pt-2">
           <div class="col-xs-24 col-lg-12">
             <img src="/images/RENSOURCE-ENERGY3.jpg" class="img-fluid" />
           </div>
-          <div class="col-xs-24 col-lg-12">
-            <form class="p-3 p-lg-6">
-              <h3 class="text-white">Contact</h3>
-              <div class="form-group">
-                <div class="label d-none">Name</div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="name"
-                  id="name"
-                  placeholder="Name"
-                />
+          <div class="col-xs-24 col-lg-12 bg-white p-9">
+            <div class="row">
+              <div class="col">
+                <h1>
+                </h1>
+                <p>
+                  Rensource Distributed Energy Limited<br />
+                  3B, Tiamiyu Savage Street<br />
+                  Victoria Island, Lagos<br />
+                  Nigeria<br />
+                  <span>+234 901 415 0103</span><br />
+                  <span>info@rensource.energy</span><br />
+                </p>
               </div>
-              <div class="form-group">
-                <div class="label d-none">Email</div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="email"
-                  id="email"
-                  placeholder="Email"
-                />
+              <div class="col">
               </div>
-              <div class="form-group">
-                <div class="label d-none">Subject</div>
-                <input
-                  type="text"
-                  class="form-control"
-                  name="subject"
-                  id="subject"
-                  placeholder="Subject"
-                />
-              </div>
-              <div class="form-group">
-                <div class="label d-none">Body</div>
-                <textarea
-                  class="form-control"
-                  name="body"
-                  id="body"
-                  placeholder="Type your message here..."
-                ></textarea>
-              </div>
-              <button
-                class="btn btn-gray-dark text-color-yellow m-auto d-block"
-              >
-                Send Us An Email
-              </button>
-            </form>
+            </div>
           </div>
         </div>
       </section>
-      
-
 
       <section class="pt-2 pb-2 bg-white">
         <div class="row justify-content-center">
