--- a/contact/index.html
+++ b/contact/index.html
@@ -117,9 +117,9 @@
           <div class="col-xs-24 col-lg-12">
             <img src="/images/RENSOURCE-ENERGY3.jpg" class="img-fluid" />
           </div>
-          <div class="col-xs-24 col-lg-12 bg-white p-9">
+          <div class="col-xs-24 col-lg-12 bg-white p-md-9 p-sm-8 p-4">
             <div class="row">
-              <div class="col">
+              <div class="col-24">
                 <h1>
                 </h1>
                 <p>
