update on google anaylytics

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -463,5 +463,11 @@
 
     <script src="/dist/vendor.js"></script>
     <script src="/dist/top.js"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-154720507-1');
+    </script>
 </body>
 </html>
