--- a/single/index.html
+++ b/single/index.html
@@ -254,5 +254,13 @@
 
     <script src="/dist/vendor.js"></script>
     <script src="/dist/top.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src=“https://www.googletagmanager.com/gtag/js?id=UA-154720507-1”></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-154720507-1');
+  </script>
   </body>
 </html>
