--- a/leadership/index.html
+++ b/leadership/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src=“https://www.googletagmanager.com/gtag/js?id=UA-154720507-1”></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-154720507-1');
+    </script>
     <title>Leadership &mdash; Rensource &mdash; Revolutionizing energy provision in Africa</title>
     <meta charset="utf-8">
     <meta name="theme-color" content="#ffffff">
@@ -463,11 +471,5 @@
 
     <script src="/dist/vendor.js"></script>
     <script src="/dist/top.js"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'UA-154720507-1');
-    </script>
 </body>
 </html>
