--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head lang="en">
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src=“https://www.googletagmanager.com/gtag/js?id=UA-154721750-1”></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154721750-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
