update on testimony

--- a/index.html
+++ b/index.html
@@ -378,11 +378,11 @@
                                 <p class="designation">Chief Executive Officer, Cars45</p>
                             </div>
                             <div class="testimony bg-yellow text-white">
-                                Rensource has been at the forefront of rural electrification in Nigeria through
+                                "Rensource has been at the forefront of rural electrification in Nigeria through
                                 renewable energy sources, it is because of this that cars45 contracted Rensource to
                                 deploy renewable power solution infrastructure across 100 cars45 inspection stations
                                 across Nigeria. So far we have not been disappointed given the company’s exceptional
-                                customer service and dedicated team of professionals </div>
+                                customer service and dedicated team of professionals" </div>
                         </div>
                         <div class="card testimonial" style="width: 300px">
                             <img class="img-fluid" src="/images/testimonials/Damilola.jpg"
@@ -397,10 +397,10 @@
                                 <p class="designation">CEO, Rural Electrification Agency(REA)</p>
                             </div>
                             <div class="testimony bg-yellow text-white">
-                                Rensource Energy has been in charge of the deployment of off grid electricity solutions
+                                "Rensource Energy has been in charge of the deployment of off grid electricity solutions
                                 at various markets across the country, and we are already witnessing positive
                                 environmental and economic impacts. This is the sort of intervention we look forward to
-                                scaling across Nigeria with support from financial institutions </div>
+                                scaling across Nigeria with support from financial institutions" </div>
                         </div>
                         <div class="card testimonial" style="width: 300px">
                             <img class="img-fluid" src="/images/testimonials/Abosede.jpg"
