--- a/leadership/index.html
+++ b/leadership/index.html
@@ -169,7 +169,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/anu-adasolum.jpg" alt="rensource energy - coo"
@@ -196,6 +196,22 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/kolawoleakinboye/" target="_blank" class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-24 col-md-6">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/senior_management/Mayowa-Alatishe.jpg"
+                                alt="rensource energy - VP, projects" class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2 yellow-text">Mayowa Alatishe</h1>
+                        <p class="white-text">VP, Technology</p>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/alatishe-mayowa-3ba29b7b" target="_blank" class="p-1">
                                 <img src="/images/linkedin.svg" class="social-img">
                             </a>
                         </p>
@@ -371,7 +387,7 @@
                             <img src="/images/board/Baafour-Boateng.jpg" alt="rensource energy - Board Member"
                                  class="portrait-img" />
                         </div>
-                        <h1 class="t-24 mb-2">Baafuor Otu-Boateng</h1>
+                        <h1 class="t-24 mb-2">Baafour Otu-Boateng</h1>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="http://www.afox.ox.ac.uk/news/baafour-otu-boateng/" target="_blank" class="p-1">
