--- a/leadership/index.html
+++ b/leadership/index.html
@@ -257,7 +257,7 @@
 
 <!--                </div>-->
 
-                <div class="col-xs-24 col-md-6 offset-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
@@ -284,6 +284,23 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/hendrik-l%C3%BChl-956503158/" target="_blank"
+                               class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-xs-24 col-md-6 ">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/senior_management/Edidiong-Uwemakpan.jpg"
+                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2 yellow-text">Edidiong Uwemakpan</h1>
+                        <p class="white-text">Head of Marketing</p>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/didiuwem/" target="_blank"
                                class="p-1">
                                 <img src="/images/linkedin.svg" class="social-img">
                             </a>
