feat /  add Bonike to leadership page

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -31,6 +31,12 @@
         .social-img {
             width: 30px !important;
         }
+        .center-box {
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+        }
     </style>
     <!--        <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,400i,500,600,700,800,900&display=swap" rel="stylesheet">-->
 
@@ -294,13 +300,32 @@
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Edidiong-Uwemakpan.jpg"
-                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />
+                                 alt="rensource energy - Head of Marketing" class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Edidiong Uwemakpan</h1>
                         <p class="white-text">Head of Marketing</p>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/didiuwem/" target="_blank"
+                               class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row center-box" >
+                <div class="col-xs-24 col-md-6 ">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/senior_management/Bonike-Ayanbadejo.jpg"
+                                 alt="rensource energy - Head | People, Performance & Culture at Rensource Energy" class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2 yellow-text">Bonike Ayanbadejo</h1>
+                        <p class="white-text">Head | People, Performance & Culture at Rensource Energy </p>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/bonike-ayanbadejo-assoc-cipd-acipm-022a8315" target="_blank"
                                class="p-1">
                                 <img src="/images/linkedin.svg" class="social-img">
                             </a>
