--- a/leadership/index.html
+++ b/leadership/index.html
@@ -230,7 +230,7 @@
                                     alt="rensource energy - Head | People, Performance & Culture at Rensource Energy" class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Bonike Ayanbadejo</h1>
-                        <p class="white-text">Head | People, Performance & Culture at Rensource Energy </p>
+                        <p class="white-text">Head, People, Performance & Culture </p>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/bonike-ayanbadejo-assoc-cipd-acipm-022a8315" target="_blank"
