added luis to the board and removed senior techical manager

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -175,7 +175,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-24 col-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/anu-adasolum.jpg" alt="rensource energy - coo"
@@ -223,23 +223,6 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6 ">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
-                            <img src="/images/senior_management/Bonike-Ayanbadejo.jpg"
-                                    alt="rensource energy - Head | People, Performance & Culture at Rensource Energy" class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2 yellow-text">Bonike Ayanbadejo</h1>
-                        <p class="white-text">Head, People, Performance & Culture </p>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://www.linkedin.com/in/bonike-ayanbadejo-assoc-cipd-acipm-022a8315" target="_blank"
-                                class="p-1">
-                                <img src="/images/linkedin.svg" class="social-img">
-                            </a>
-                        </p>
-                    </div>
-                </div>
 <!--                <div class="col-xs-24 col-md-6">-->
 <!--                    <div class="p-1">-->
 <!--                        <div class="portrait mb-2">-->
@@ -279,8 +262,25 @@
 <!--                    </div>-->
 
 <!--                </div>-->
+                <div class="col-xs-24 col-md-6 offset-md-3 ">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/senior_management/Bonike-Ayanbadejo.jpg"
+                                 alt="rensource energy - Head | People, Performance & Culture at Rensource Energy" class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2 yellow-text">Bonike Ayanbadejo</h1>
+                        <p class="white-text">Head, People, Performance & Culture </p>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/bonike-ayanbadejo-assoc-cipd-acipm-022a8315" target="_blank"
+                               class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
 
-                <div class="col-xs-24 col-md-6 offset-md-3">
+                <div class="col-xs-24 col-md-6 ">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
@@ -296,23 +296,23 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6 ">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
-                            <img src="/images/senior_management/Hendrik-Luhl.jpg"
-                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2 yellow-text">Hendrik Lühl</h1>
-                        <p class="white-text">Senior Technical Manager</p>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://www.linkedin.com/in/hendrik-l%C3%BChl-956503158/" target="_blank"
-                               class="p-1">
-                                <img src="/images/linkedin.svg" class="social-img">
-                            </a>
-                        </p>
-                    </div>
-                </div>
+<!--                <div class="col-xs-24 col-md-6 ">-->
+<!--                    <div class="p-1">-->
+<!--                        <div class="portrait mb-2">-->
+<!--                            <img src="/images/senior_management/Hendrik-Luhl.jpg"-->
+<!--                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />-->
+<!--                        </div>-->
+<!--                        <h1 class="t-24 mb-2 yellow-text">Hendrik Lühl</h1>-->
+<!--                        <p class="white-text">Senior Technical Manager</p>-->
+<!--                        <p style="display: inline-block;">-->
+<!--                            <span class="d-none">Social Media Handles</span>-->
+<!--                            <a href="https://www.linkedin.com/in/hendrik-l%C3%BChl-956503158/" target="_blank"-->
+<!--                               class="p-1">-->
+<!--                                <img src="/images/linkedin.svg" class="social-img">-->
+<!--                            </a>-->
+<!--                        </p>-->
+<!--                    </div>-->
+<!--                </div>-->
                 <div class="col-xs-24 col-md-6 ">
                     <div class="p-1">
                         <div class="portrait mb-2">
@@ -376,6 +376,23 @@
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
+                            <img src="/images/board/luis_m_faria.png" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2">Luis Faria</h1>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/luis-faria-6539551a/?originalSubdomain=pt" target="_blank" class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-24 col-md-6 offset-md-3">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
                             <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
                                  class="portrait-img" />
                         </div>
@@ -388,9 +405,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-24 col-md-6 offset-md-3">
+                <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/david-ladipo.jpg" alt="rensource energy - Board Member"
@@ -421,8 +436,9 @@
                         </p>
                     </div>
                 </div>
-
-                <div class="col-xs-24 col-md-6">
+            </div>
+            <div class="row">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/Baafour-Boateng.jpg" alt="rensource energy - Board Member"
@@ -490,7 +506,7 @@
                     </li> -->
                         </ul>
                     </nav>
-                    <p class="show-xs mt-2">©2019 Rensource Inc. All Rights Reserved.</p>
+                    <p class="show-xs mt-2">©2020 Rensource Inc. All Rights Reserved.</p>
                 </div>
                 <span id="toTop" class="toTop" onclick="window.scrollTo({top: 0,left: 0,behavior: 'smooth'})">
                     <img src="/images/toTop.svg" class="img-fluid">
@@ -521,7 +537,7 @@
         </div>
         <div class="copyright hide-xs footer-bottom">
             <div class="container">
-                ©2019 Rensource Inc. All Rights Reserved.
+                ©2020 Rensource Inc. All Rights Reserved.
             </div>
         </div>
     </footer>
