changed saved to avoided

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                             322.00MT
                         </h2>
                         <p class="text-white">
-                            CO2 Emmisions Saved
+                            CO2 Emmisions Avoided
                         </p>
                     </span>
                 </div>
