--- a/leadership/index.html
+++ b/leadership/index.html
@@ -393,21 +393,6 @@
                 <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
-                            <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
-                                 class="portrait-img" />
-                        </div>
-                        <h1 class="t-24 mb-2">Jonathan Kirschner</h1>
-                        <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://www.linkedin.com/in/jwkirschner/" target="_blank" class="p-1">
-                                <img src="/images/linkedin.svg" class="social-img">
-                            </a>
-                        </p>
-                    </div>
-                </div>
-                <div class="col-xs-24 col-md-6">
-                    <div class="p-1">
-                        <div class="portrait mb-2">
                             <img src="/images/board/david-ladipo.jpg" alt="rensource energy - Board Member"
                                  class="portrait-img" />
                         </div>
@@ -420,7 +405,21 @@
                         </p>
                     </div>
                 </div>
-
+                <div class="col-xs-24 col-md-6">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/board/Jill-Macari.png" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
+                        </div>
+                        <h1 class="t-24 mb-2">Jill Macari</h1>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://www.linkedin.com/in/jillmacari/" target="_blank" class="p-1">
+                                <img src="/images/linkedin.svg" class="social-img">
+                            </a>
+                        </p>
+                    </div>
+                </div>
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
